--- a/gw-dev/Makefile
+++ b/gw-dev/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	gw-dev-1.0
+DISTNAME=	gw-dev-1.1
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 
@@ -12,6 +12,7 @@ DEPENDS+=	gw-base>=1.0:../../gw/gw-base
 # DEVELOPMENT TOOLS
 DEPENDS+=	automake>=1.16:../../devel/automake
 DEPENDS+=	gettext-m4>=0.21:../../devel/gettext-m4
+DEPENDS+=	libkver>=0.7.2:../../pkgtools/libkver
 DEPENDS+=	mercurial>=5.5:../../devel/mercurial
 DEPENDS+=	pkg_chk>=2.0:../../pkgtools/pkg_chk
 DEPENDS+=	pkgdiff>=1.9:../../pkgtools/pkgdiff
