--- a/gw-dev/Makefile
+++ b/gw-dev/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	gw-dev-1.4
+DISTNAME=	gw-dev-1.5
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 
@@ -16,11 +16,19 @@ DEPENDS+=	digest>=20190127:../../pkgtools/digest
 DEPENDS+=	gettext-m4>=0.21:../../devel/gettext-m4
 DEPENDS+=	libkver>=0.7.2:../../pkgtools/libkver
 DEPENDS+=	mercurial>=5.5:../../devel/mercurial
-DEPENDS+=	pkg_chk>=2.0:../../pkgtools/pkg_chk
 DEPENDS+=	pkgdiff>=1.9:../../pkgtools/pkgdiff
 DEPENDS+=	pkglint>=20.3.1:../../pkgtools/pkglint
 DEPENDS+=	sandboxctl>=1.1:../../sysutils/sandboxctl
 DEPENDS+=	unidiff>=1.0:../../devel/unidiff
+
+# PACKAGING TOOLS
+#
+# - We only want these in the sandboxes, really, to avoid
+#   accidental package churn on the actual systems.
+# - On the installed OS we would want to use pkgin instead.
+#
+#DEPENDS+=	pkg_chk>=2.0:../../pkgtools/pkg_chk
+#DEPENDS+=	pkg_rolling-replace>=0.24.12:../../pkgtools/pkg_rolling-replace
 
 # REPOSITORY TOOLS
 # reposurgeon or cvs-fast-export needs coreutils for some command...
