Switch to using category zz

--- a/gw-dev/Makefile
+++ b/gw-dev/Makefile
@@ -7,7 +7,7 @@ MASTER_SITES=	# empty
 MAINTAINER=	pkgsrc-maintainer@global-wire.fi
 COMMENT=	Development environment tools
 
-DEPENDS+=	gw-base>=2.0:../../gw/gw-base
+DEPENDS+=	gw-base>=2.0:../../zz/gw-base
 
 # DEVELOPMENT TOOLS
 DEPENDS+=	autoconf>=2.71:../../devel/autoconf
