--- a/gw-mail/Makefile
+++ b/gw-mail/Makefile
@@ -7,7 +7,7 @@ MASTER_SITES=	# empty
 MAINTAINER=	pkgsrc-maintainer@global-wire.fi
 COMMENT=	Development environment tools
 
-DEPENDS+=	gw-base>=2.0:../../gw/gw-base
+DEPENDS+=	gw-base>=2.0:../../zz/gw-base
 
 DEPENDS+=	lynx>=2.8.9:../../www/lynx
 DEPENDS+=	mutt>=2.0.7:../../mail/mutt
