--- a/gw-base/Makefile
+++ b/gw-base/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	gw-base-2.2
+DISTNAME=	gw-base-2.3
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 
@@ -42,6 +42,9 @@ DEPENDS+=	procmail>=3.22:../../mail/procmail
 DEPENDS+=	git>=2.34:../../devel/git
 DEPENDS+=	perl>=5.30:../../lang/perl5
 DEPENDS+=	${PYPKGPREFIX}-pip>=20:../../devel/py-pip
+
+# for GitHub
+DEPENDS+=	gh>=2.3.0:../../net/gh
 
 # CONVENIENCE TOOLS
 DEPENDS+=	curl>=7.72:../../www/curl
