--- a/gw-web-server/Makefile
+++ b/gw-web-server/Makefile
@@ -6,6 +6,7 @@ MASTER_SITES=	# empty
 
 MAINTAINER=	pkgsrc-maintainer@global-wire.fi
 COMMENT=	Web server environment
+LICENSE=	2-clause-bsd
 
 DEPENDS+=	gw-base>=2.0:../../zz/gw-base
 
