--- a/gw-mail/Makefile
+++ b/gw-mail/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	gw-mail-2.1
+DISTNAME=	gw-mail-2.2
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 
@@ -10,6 +10,7 @@ LICENSE=	2-clause-bsd
 
 DEPENDS+=	gw-base>=2.0:../../zz/gw-base
 
+DEPENDS+=	gnupg2>=2.2.40:../../security/gnupg2
 DEPENDS+=	lynx>=2.8.9:../../www/lynx
 DEPENDS+=	mutt>=2.0.7:../../mail/mutt
 
