--- a/gw-dev/Makefile
+++ b/gw-dev/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	gw-dev-2.3
+DISTNAME=	gw-dev-2.5
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 
@@ -24,7 +24,7 @@ DEPENDS+=	revbump>=2.15:../../pkgtools/revbump
 DEPENDS+=	sandboxctl>=1.1:../../sysutils/sandboxctl
 DEPENDS+=	unidiff>=1.0:../../devel/unidiff
 
-DEPENDS+=	gnupg2>=2.2.40:../../security/gnupg2
+DEPENDS+=	gnupg2-as-gpg>=1.0:../../zz/gnupg2-as-gpg
 
 # PACKAGING TOOLS
 #
