Switch to just git-base
The build of git-contrib fails, and git depends on it.

--- a/gw-base/Makefile
+++ b/gw-base/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	gw-base-2.6
+DISTNAME=	gw-base-2.7
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 
@@ -39,7 +39,8 @@ DEPENDS+=	procmail>=3.22:../../mail/procmail
 #DEPENDS+=	transmission>=3.0:../../net/transmission
 
 # DEVELOPMENT TOOLS
-DEPENDS+=	git>=2.34:../../devel/git
+#DEPENDS+=	git>=2.34:../../devel/git
+DEPENDS+=	git-base>=2.39.1:../../devel/git-base
 DEPENDS+=	perl>=5.30:../../lang/perl5
 DEPENDS+=	${PYPKGPREFIX}-pip>=20:../../devel/py-pip
 
