--- a/gw-base/Makefile
+++ b/gw-base/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	gw-base-2.7
+DISTNAME=	gw-base-2.7.1
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 
@@ -44,7 +44,7 @@ DEPENDS+=	git-base>=2.39.1:../../devel/git-base
 DEPENDS+=	perl>=5.30:../../lang/perl5
 DEPENDS+=	${PYPKGPREFIX}-pip>=20:../../devel/py-pip
 
-DEPENDS+=	tig>=2.5.7:../../devel/tig
+#DEPENDS+=	tig>=2.5.7:../../devel/tig
 
 # for GitHub
 DEPENDS+=	gh>=2.3.0:../../net/gh
