--- a/gw-base/Makefile
+++ b/gw-base/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	gw-base-2.8
+DISTNAME=	gw-base-2.9
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 
@@ -59,6 +59,9 @@ DEPENDS+=	osname>=2.0:../../sysutils/osname
 #DEPENDS+=	remind>=3.2:../../time/remind
 #DEPENDS+=	tcptraceroute6>=1.0:../../net/tcptraceroute6
 DEPENDS+=	watch>=3.2.6:../../misc/watch
+
+# Mainly for py-postfix-mta-sts-resolver
+DEPENDS+=	daemond>=1.0:../../sysutils/daemond
 
 # PACKAGE MANAGEMENT
 #
