--- a/gw-mail/Makefile
+++ b/gw-mail/Makefile
@@ -15,7 +15,8 @@ DEPENDS+=	lynx>=2.8.9:../../www/lynx
 DEPENDS+=	mutt>=2.0.7:../../mail/mutt
 DEPENDS+=	nmh>=1.8:../../mail/nmh
 DEPENDS+=	${PYPKGPREFIX}-postfix-mta-sts-resolver>=1.4.0:../../mail/py-postfix-mta-sts-resolver
-DEPENDS+=	rspamd>=3.7.5:../../mail/rspamd
+DEPENDS+=	opendkim>=2.10.3:../../mail/opendkim
+#DEPENDS+=	rspamd>=3.7.5:../../mail/rspamd
 
 META_PACKAGE=	yes
 
