Add a comment for postgrey

--- a/gw-mail/Makefile
+++ b/gw-mail/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	gw-mail-2.9
+DISTNAME=	gw-mail-2.11
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 
@@ -16,6 +16,7 @@ DEPENDS+=	mutt>=2.0.7:../../mail/mutt
 DEPENDS+=	nmh>=1.8:../../mail/nmh
 DEPENDS+=	${PYPKGPREFIX}-postfix-mta-sts-resolver>=1.4.0:../../mail/py-postfix-mta-sts-resolver
 DEPENDS+=	opendkim>=2.10.3:../../mail/opendkim
+#DEPENDS+=	postgrey>=1.37:../../mail/postgrey
 #DEPENDS+=	rspamd>=3.7.5:../../mail/rspamd
 
 META_PACKAGE=	yes
