--- a/gw-base/Makefile
+++ b/gw-base/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	gw-base-3.6.3
+DISTNAME=	gw-base-3.6.4
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 
@@ -48,7 +48,7 @@ DEPENDS+=	procmail>=3.22:../../mail/procmail
 DEPENDS+=	git>=2.39.1:../../devel/git
 DEPENDS+=	perl>=5.30:../../lang/perl5
 DEPENDS+=	${PYPKGPREFIX}-pip>=20:../../devel/py-pip
-#DEPENDS+=	${PYPKGPREFIX}-pipx>=1.1.0:../../devel/py-pipx
+DEPENDS+=	${PYPKGPREFIX}-pipx>=1.7.1:../../devel/py-pipx
 
 DEPENDS+=	tig>=2.5.7:../../devel/tig
 
